optimisition for mobail

--- a/src/pages/components/pageAboutProducts/aboutProducts.html
+++ b/src/pages/components/pageAboutProducts/aboutProducts.html
@@ -2,7 +2,8 @@
     <h2 class="heading about-block__heading_center">О проекте</h2>
     <div class="about-block__block">
         <div class="about-block__left">
-            <img src="./images/about-products.png" alt="project-founders-network" class="about-block__images">
+            <img src="./images/about-products.png" alt="project-founders-network" class="about-block__images block-none_md">
+            <img src="./images/about-products_sm.png" alt="project-founders-network" class="about-block__images block-none_sm">
         </div>
         <div class="about-block__right">
             <p class="description about-block__description about-block__description_text">Проект Development Corporation является экосистемой, целью которой является сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном и финансовом плане. Экосистема предоставляет человеку возможность  обучения в любом виде и форме, которую выбрал он сам. Мы разрабатываем IT продукты, которые будут обучать и развивать и давать опыт вам в выбранной вами области. С продуктами, которые мы разрабатываем на данный момент, можно ознакомиться во вкладке “Продукты”.</p>
