--- a/src/pages/components/pageAboutProducts/purposesAndMission.html
+++ b/src/pages/components/pageAboutProducts/purposesAndMission.html
@@ -3,13 +3,17 @@
     <ul class="purposes-mission__list">
         <li class="purposes-mission__item">
             <img src="./images/purposes.svg" alt="purposes" class="purposes-mission__images">
-            <h5 class="purposes-mission__heading">Наша цель</h5>
-            <p class="description purposes-mission__description">Создать крупнейшую инновационную экосистему, где каждый сможет достигать своих целей, объединяясь с другими, и с помощью полученных знаний строить своё будущее.</p>
+            <span>
+                <h5 class="purposes-mission__heading">Наша цель</h5>
+                <p class="description purposes-mission__description">Создать крупнейшую инновационную экосистему, где каждый сможет достигать своих целей, объединяясь с другими, и с помощью полученных знаний строить своё будущее.</p>
+            </span>
         </li>
         <li class="purposes-mission__item">
             <img src="./images/mission.svg" alt="mission" class="purposes-mission__images">
-            <h5 class="purposes-mission__heading">Наша миссия</h5>
-            <p class="description purposes-mission__description">Объединить в одном месте амбициозных людей, готовых идти к своим целям, для того, чтобы раскрыть их потенциал, реализовать цели и задачи.</p>
+            <span>
+                <h5 class="purposes-mission__heading">Наша миссия</h5>
+                <p class="description purposes-mission__description">Объединить в одном месте амбициозных людей, готовых идти к своим целям, для того, чтобы раскрыть их потенциал, реализовать цели и задачи.</p>
+            </span>
         </li>
     </ul>
 </section>
