--- a/src/pages/components/pageFounders/swiperFounders.html
+++ b/src/pages/components/pageFounders/swiperFounders.html
@@ -2,44 +2,64 @@
   <h2 class="heading about-block__heading_center">Основатели</h2>
     <div class="swiper-founders__items">
         <div class="swiper-founders__item active">
-            <img class="swiper-founders__images" src="./images/founder1.png" />
+            <span class="swiper-founders__info">
+              <img class="swiper-founders__images" src="./images/founder1.png" />
+              <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20 0C31.0457 0 40 8.9543 40 20C40 31.0457 31.0457 40 20 40C8.9543 40 0 31.0457 0 20C0 8.9543 8.9543 0 20 0ZM20 2.5C10.335 2.5 2.5 10.335 2.5 20C2.5 29.665 10.335 37.5 20 37.5C29.665 37.5 37.5 29.665 37.5 20C37.5 10.335 29.665 2.5 20 2.5ZM20 17.0833C20.6497 17.0833 21.1837 17.5791 21.2443 18.2129L21.25 18.3333V27.5C21.25 28.1904 20.6904 28.75 20 28.75C19.3503 28.75 18.8163 28.2543 18.7557 27.6204L18.75 27.5V18.3333C18.75 17.643 19.3096 17.0833 20 17.0833ZM20 10.8333C20.9205 10.8333 21.6667 11.5795 21.6667 12.5C21.6667 13.4205 20.9205 14.1667 20 14.1667C19.0795 14.1667 18.3333 13.4205 18.3333 12.5C18.3333 11.5795 19.0795 10.8333 20 10.8333Z" fill="white"/>
+              </svg>
+              <div class="swiper-founders__info-block">
+                <h5 class="swiper-founders__info-heading">Владислав Милевский</h5>
+                <small class="swiper-founders__info-small">CVO</small>
+                <p class="swiper-founders__info-description">Занимается планированием стратегии работы. Ответственный за привлечение людей в проект. Является руководителем нашего комьюнити в Discord. Строит межличностные отношения между работниками.</p>
+              </div>
+            </span>
             <span class="swiper-founders__mane">Владислав Милевский</span>
             <span class="swiper-description">CVO</span>
-            <div class="swiper-founders__hiadeng">
-              <p class="swiper-founders__hiadeng-name">Владислав Милевский</p>
-              <p class="swiper-founders__hiadeng-description">CVO</p>
-              <p class="swiper-founders__hiadeng-hobi">Занимается планированием стратегии работы. Ответственный за привлечение людей в проект. Является руководителем нашего комьюнити в Discord. Строит межличностные отношения между работниками.</p>
-            </div>
         </div>
         <div class="swiper-founders__item next">
+          <span class="swiper-founders__info">
             <img class="swiper-founders__images" src="./images/founder2.png"/>
+            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20 0C31.0457 0 40 8.9543 40 20C40 31.0457 31.0457 40 20 40C8.9543 40 0 31.0457 0 20C0 8.9543 8.9543 0 20 0ZM20 2.5C10.335 2.5 2.5 10.335 2.5 20C2.5 29.665 10.335 37.5 20 37.5C29.665 37.5 37.5 29.665 37.5 20C37.5 10.335 29.665 2.5 20 2.5ZM20 17.0833C20.6497 17.0833 21.1837 17.5791 21.2443 18.2129L21.25 18.3333V27.5C21.25 28.1904 20.6904 28.75 20 28.75C19.3503 28.75 18.8163 28.2543 18.7557 27.6204L18.75 27.5V18.3333C18.75 17.643 19.3096 17.0833 20 17.0833ZM20 10.8333C20.9205 10.8333 21.6667 11.5795 21.6667 12.5C21.6667 13.4205 20.9205 14.1667 20 14.1667C19.0795 14.1667 18.3333 13.4205 18.3333 12.5C18.3333 11.5795 19.0795 10.8333 20 10.8333Z" fill="white"/>
+            </svg>
+            <div class="swiper-founders__info-block">
+              <h5 class="swiper-founders__info-heading">Матвей Шиманович</h5>
+              <small class="swiper-founders__info-small">СМО</small>
+              <p class="swiper-founders__info-description">Ответственный за все ключевые креативные решения. Продвигает проект Development Corporation в масс медиа. Строит и планирует систему работы копирайтеров, дизайнеров и smm менеджеров.</p>
+            </div>
+          </span>
             <span class="swiper-founders__mane">Матвей Шиманович</span>
             <span class="swiper-description">СМО</span>
-            <div class="swiper-founders__hiadeng">
-              <p class="swiper-founders__hiadeng-name">Матвей Шиманович</p>
-              <p class="swiper-founders__hiadeng-description">СМО</p>
-              <p class="swiper-founders__hiadeng-hobi">Ответственный за все ключевые креативные решения. Продвигает проект Development Corporation в масс медиа. Строит и планирует систему работы копирайтеров, дизайнеров и smm менеджеров.</p>
-            </div>
         </div>
         <div class="swiper-founders__item">
+          <span class="swiper-founders__info">
             <img class="swiper-founders__images" src="./images/founder3.png"/>
+            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20 0C31.0457 0 40 8.9543 40 20C40 31.0457 31.0457 40 20 40C8.9543 40 0 31.0457 0 20C0 8.9543 8.9543 0 20 0ZM20 2.5C10.335 2.5 2.5 10.335 2.5 20C2.5 29.665 10.335 37.5 20 37.5C29.665 37.5 37.5 29.665 37.5 20C37.5 10.335 29.665 2.5 20 2.5ZM20 17.0833C20.6497 17.0833 21.1837 17.5791 21.2443 18.2129L21.25 18.3333V27.5C21.25 28.1904 20.6904 28.75 20 28.75C19.3503 28.75 18.8163 28.2543 18.7557 27.6204L18.75 27.5V18.3333C18.75 17.643 19.3096 17.0833 20 17.0833ZM20 10.8333C20.9205 10.8333 21.6667 11.5795 21.6667 12.5C21.6667 13.4205 20.9205 14.1667 20 14.1667C19.0795 14.1667 18.3333 13.4205 18.3333 12.5C18.3333 11.5795 19.0795 10.8333 20 10.8333Z" fill="white"/>
+            </svg>
+            <div class="swiper-founders__info-block">
+              <h5 class="swiper-founders__info-heading">Роман Котляров</h5>
+              <small class="swiper-founders__info-small">СОО</small>
+              <p class="swiper-founders__info-description">Специалист в области фондового рынка. Строит и планирует систему работы копирайтеров. Разрабатывает стратегии развития проекта Development Corporation.</p>
+            </div>
+          </span>
             <span class="swiper-founders__mane">Роман Котляров</span>
             <span class="swiper-description">СОО</span>
-            <div class="swiper-founders__hiadeng">
-              <p class="swiper-founders__hiadeng-name">Роман Котляров</p>
-              <p class="swiper-founders__hiadeng-description">СОО</p>
-              <p class="swiper-founders__hiadeng-hobi">Специалист в области фондового рынка. Строит и планирует систему работы копирайтеров. Разрабатывает стратегии развития проекта Development Corporation.</p>
-            </div>
         </div>
         <div class="swiper-founders__item prev">
+          <span class="swiper-founders__info">
             <img class="swiper-founders__images" src="./images/founder4.png"/>
+            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20 0C31.0457 0 40 8.9543 40 20C40 31.0457 31.0457 40 20 40C8.9543 40 0 31.0457 0 20C0 8.9543 8.9543 0 20 0ZM20 2.5C10.335 2.5 2.5 10.335 2.5 20C2.5 29.665 10.335 37.5 20 37.5C29.665 37.5 37.5 29.665 37.5 20C37.5 10.335 29.665 2.5 20 2.5ZM20 17.0833C20.6497 17.0833 21.1837 17.5791 21.2443 18.2129L21.25 18.3333V27.5C21.25 28.1904 20.6904 28.75 20 28.75C19.3503 28.75 18.8163 28.2543 18.7557 27.6204L18.75 27.5V18.3333C18.75 17.643 19.3096 17.0833 20 17.0833ZM20 10.8333C20.9205 10.8333 21.6667 11.5795 21.6667 12.5C21.6667 13.4205 20.9205 14.1667 20 14.1667C19.0795 14.1667 18.3333 13.4205 18.3333 12.5C18.3333 11.5795 19.0795 10.8333 20 10.8333Z" fill="white"/>
+            </svg>
+            <div class="swiper-founders__info-block">
+              <h5 class="swiper-founders__info-heading">Святослав Кратик</h5>
+              <small class="swiper-founders__info-small">СЕО</small>
+              <p class="swiper-founders__info-description">Основатель проекта, идейный лидер. Строит основные roadmap проекта, отвечает за принятие стратегияеских решений по развитию Development Corporation. Отвечает за отдел разработок проекта. Работает с инвестиционным фондом проекта.</p>
+            </div>
+          </span>
             <span class="swiper-founders__mane">Святослав Кратик</span>
             <span class="swiper-description">СЕО</span>
-            <div class="swiper-founders__hiadeng">
-              <p class="swiper-founders__hiadeng-name">Святослав Кратик</p>
-              <p class="swiper-founders__hiadeng-description">CVO</p>
-              <p class="swiper-founders__hiadeng-hobi">Основатель проекта, идейный лидер. Строит основные roadmap проекта, отвечает за принятие стратегияеских решений по развитию Development Corporation. Отвечает за отдел разработок проекта. Работает с инвестиционным фондом проекта. </p>
-            </div>
         </div>
         <div class="swiper-founders__button-container">
             <div class="swiper-founders__button"></div>
