--- a/src/pages/components/pageHome/founders.html
+++ b/src/pages/components/pageHome/founders.html
@@ -2,7 +2,8 @@
     <h2 class="heading about-block__heading about-block__heading_founders">Основатели</h2>
     <div class="about-block__block about-block__block-reverse">
         <div class="about-block__left">
-            <img src="./images/founders.png" alt="project-founders-network" class="about-block__images">
+            <img src="./images/founders.png" alt="project-founders-network" class="about-block__images block-none_md">
+            <img src="./images/founders_sm.png" alt="project-founders-network" class="about-block__images block-none_sm">
         </div>
         <div class="about-block__right">
             <p class="description about-block__description">Этот блок сайта отведён под основателей и партнёров проекта, ведь всем известно, что лицом и флагманом проекта являются создатели. Именно они высаживают маленькое плодоносное деревце и делают всё, чтобы оно выросло и стало самостоятельным, требовало минимальный уход и приносило плоды. Давайте знакомиться.</p>
