--- a/src/pages/components/pageHome/project.html
+++ b/src/pages/components/pageHome/project.html
@@ -2,7 +2,8 @@
     <h2 class="heading about-block__heading about-block__heading_project">О проекте</h2>
     <div class="about-block__block">
         <div class="about-block__left">
-            <img src="./images/projects.png" alt="project" class="about-block__images">
+            <img src="./images/projects.png" alt="project" class="about-block__images block-none_md">
+            <img src="./images/projects_sm.png" alt="project" class="about-block__images block-none_sm">
         </div>
         <div class="about-block__right">
             <p class="description about-block__description">Интернациональная команда, в которой находятся люди из США, Польши, России, Беларуси, Украины, Германии, Приднестровья, работает над общей целью- сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном, финансовом плане. И всё это происходит в рамках нашей экосистемы "Development_corporation", под эгидой которой будет выпущено множество продуктов.</p>
