--- a/src/pages/components/pageSocilNetwork/instagram.html
+++ b/src/pages/components/pageSocilNetwork/instagram.html
@@ -2,10 +2,12 @@
     <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
     <div class="about-block__block about-block__block-reverse">
         <div class="about-block__left about-block__left_right">
-            <img src="./images/instagram.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            <a target="_blank" href="https://instagram.com/_devcorp_?igshid=YmMyMTA2M2Y=">
+                <img src="./images/instagram.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            </a>
         </div>
         <div class="about-block__right">
-            <h6 class="about-block__title">Instagram</h6>
+            <h6 class="about-block__title"><a target="_blank" href="https://instagram.com/_devcorp_?igshid=YmMyMTA2M2Y=">Instagram</a></h6>
             <p class="description about-block__description">Людям всегда интересно следить за тем, как кто-то делает что-то невероятно классное. Поэтому в формате блога нашего идейного основателя мы рассказываем про то, какие проблемы встречаются на пути разработки проекта, как мы преодолеваем личностные испытания, да и в конце концов делимся своей жизнью и мировоззрением. Подписывайтесь и будьте вкурсе всех событий.</p>
         </div>
     </div>
