--- a/src/pages/components/pageHome/network.html
+++ b/src/pages/components/pageHome/network.html
@@ -2,7 +2,8 @@
     <h2 class="heading about-block__heading about-block__heading_network">Социальные сети</h2>
     <div class="about-block__block">
         <div class="about-block__left">
-            <img src="./images/social-network.png" alt="network" class="about-block__images">
+            <img src="./images/social-network.png" alt="network" class="about-block__images block-none_md">
+            <img src="./images/social-network_sm.png" alt="network" class="about-block__images block-none_sm">
         </div>
         <div class="about-block__right">
             <p class="description about-block__description">В современном мире во многих инновационных проектах важную роль занимают социальные сети, ведь благодаря им у людей есть возможность объединяться, принимать активное участие в проектах будущего и мы не исключение. Мы ведём работу по многим направлениям, и соц-сети - одно из них. Мы ведём Telegram, instagram, Discord, TikTok.</p>
