--- a/src/pages/components/pageProducts/discordCommunity.html
+++ b/src/pages/components/pageProducts/discordCommunity.html
@@ -2,10 +2,12 @@
     <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
     <div class="about-block__block about-block__block-reverse">
         <div class="about-block__left about-block__left_right">
-            <img src="./images/devcom.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            <a target="_blank" href="https://discord.gg/Cmw5XYVG">
+                <img src="./images/devcom.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            </a>
         </div>
         <div class="about-block__right">
-            <h6 class="about-block__title">DevCom</h6>
+            <h6 class="about-block__title"><a target="_blank" href="https://discord.gg/Cmw5XYVG">DevCom</a></h6>
             <p class="description about-block__description">В нашем дискорде вы можете расширить человеческий капитал, получить знание от более опытных людей в выбранной вами сфере, участвовать в онлайн мероприятиях нашего сообщества. Вы можете выбирать то, как и где вы будете учиться.</p>
         </div>
     </div>
