--- a/src/pages/components/pageProducts/invoc.html
+++ b/src/pages/components/pageProducts/invoc.html
@@ -2,10 +2,12 @@
     <h2 class="heading about-block__heading_center">Продукты</h2>
     <div class="about-block__block">
         <div class="about-block__left">
-            <img src="./images/invoc.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            <a target="_blank" href="https://t.me/InVoc_bot">
+                <img src="./images/invoc.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            </a>
         </div>
         <div class="about-block__right">
-            <h6 class="about-block__title">Invoc</h6>
+            <h6 class="about-block__title"><a target="_blank" href="https://t.me/InVoc_bot">Invoc</a></h6>
             <p class="description about-block__description">Telegram Bot создан для того, чтобы давать вам знания из сферы криптовалют, финансовой грамотности и фондового рынка. Вы получите возможность иметь портативный словарь, где храниться более 600-а терминов и более 200-а фигур технического анализа для рыночного графика.</p>
         </div>
     </div>
