--- a/src/pages/components/pageSocilNetwork/telegram.html
+++ b/src/pages/components/pageSocilNetwork/telegram.html
@@ -2,10 +2,12 @@
     <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
     <div class="about-block__block">
         <div class="about-block__left">
-            <img src="./images/telegram.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            <a target="_blank" href="https://t.me/teambestcom">
+                <img src="./images/telegram.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
+            </a>
         </div>
         <div class="about-block__right">
-            <h6 class="about-block__title">Telegram</h6>
+            <h6 class="about-block__title"><a target="_blank" href="https://t.me/teambestcom">Telegram</a></h6>
             <p class="description about-block__description">Все актуальные финансовые новости фондовой биржи, криптовалют и перспективных стартапов. Мы ведём ежедневный контроль за всеми событиями. Подписывайтесь и следите за актульными  событиями вместе с нами!</p>
         </div>
     </div>
