--- a/src/styles/components/commonСomponents/abourBlockModifier.css
+++ b/src/styles/components/commonСomponents/abourBlockModifier.css
@@ -45,6 +45,10 @@
     overflow: visible !important;
 }
 
+.block-none_sm {
+    display: none;
+}
+
 @media (max-width: 1280px) {
     .about-block__heading_project::after {
         left: -574px;
@@ -126,6 +130,14 @@
     
     .about-block__heading_our-plans::after {
         left: -576px;
+    }
+
+    .block-none_sm {
+        display: inline-block;
+    }
+
+    .block-none_md {
+        display: none;
     }
 }
 
