added functional animations

--- a/src/pages/components/commonСomponents/head.html
+++ b/src/pages/components/commonСomponents/head.html
@@ -10,4 +10,6 @@
     <link rel="icon" href="./images/icon.svg">
     <link rel="stylesheet" href="./styles/main.min.css" />
     <script defer src="./scripts/main.js"></script>
+    <script src="./scripts/wow.min.js"></script>
+    <script>new WOW().init();</script>
 </head>
