--- a/src/pages/components/pageFounders/swiperFounders.html
+++ b/src/pages/components/pageFounders/swiperFounders.html
@@ -1,6 +1,6 @@
 <section class="swiper-founders wrapper">
-  <h2 class="heading about-block__heading_center">Основатели</h2>
-    <div class="swiper-founders__items">
+  <h2 class="wow animate__fadeInUp heading about-block__heading_center">Основатели</h2>
+    <div class="wow animate__fadeInUp swiper-founders__items">
         <div class="swiper-founders__item active">
             <span class="swiper-founders__info">
               <img class="swiper-founders__images" src="./images/founder1.png" />
