--- a/src/pages/components/pageHome/network.html
+++ b/src/pages/components/pageHome/network.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading about-block__heading_network">Социальные сети</h2>
-    <div class="about-block__block">
+    <h2 class="wow animate__fadeInLeft heading about-block__heading about-block__heading_network">Социальные сети</h2>
+    <div class="wow animate__slideInUp about-block__block">
         <div class="about-block__left">
             <img src="./images/social-network.png" alt="network" class="about-block__images block-none_md">
             <img src="./images/social-network_sm.png" alt="network" class="about-block__images block-none_sm">
