--- a/src/pages/components/pageHome/opportunities.html
+++ b/src/pages/components/pageHome/opportunities.html
@@ -1,6 +1,6 @@
 <section class="opportunities wrapper">
-    <h2 class="heading opportunities__heading">Возможности</h2>
-    <ul class="opportunities__list">
+    <h2 class="wow animate__fadeInLeft heading opportunities__heading">Возможности</h2>
+    <ul class="wow animate__slideInUp opportunities__list">
         <li class="opportunities__item">
             <img src="./images/opportunities1.png" alt="Учись" class="opportunities__images">
             <span>
