--- a/src/pages/components/pageHome/projectsCompany.html
+++ b/src/pages/components/pageHome/projectsCompany.html
@@ -1,6 +1,6 @@
 <section class="projects-company wrapper">
-    <h2 class="heading projects-company__heading">Продукты компании</h2>
-    <div class="projects-company__container">
+    <h2 class="wow animate__fadeInLeft animate__animated animate__fadeInLeft  heading projects-company__heading">Продукты компании</h2>
+    <div class="wow animate__slideInUp projects-company__container">
         <img src="./images/projects-company.png" alt="Продукты компании" class="projects-company__images">
         <div class="projects-company__circle projects-company__circle_active">
             InVoc
