--- a/src/pages/components/pageProducts/invoc.html
+++ b/src/pages/components/pageProducts/invoc.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading_center">Продукты</h2>
-    <div class="about-block__block">
+    <h2 class="wow animate__fadeInUp heading about-block__heading_center">Продукты</h2>
+    <div class="wow animate__slideInUp about-block__block">
         <div class="about-block__left">
             <a target="_blank" href="https://t.me/InVoc_bot">
                 <img src="./images/invoc.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
