--- a/src/pages/components/pageSocilNetwork/instagram.html
+++ b/src/pages/components/pageSocilNetwork/instagram.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
-    <div class="about-block__block about-block__block-reverse">
+    <h2 class="wow animate__fadeInLeft heading about-block__heading about-block__heading_our-plans"></h2>
+    <div class="wow animate__slideInUp about-block__block about-block__block-reverse">
         <div class="about-block__left about-block__left_right">
             <a target="_blank" href="https://instagram.com/_devcorp_?igshid=YmMyMTA2M2Y=">
                 <img src="./images/instagram.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
