--- a/src/pages/components/pageAboutProducts/aboutCommunity.html
+++ b/src/pages/components/pageAboutProducts/aboutCommunity.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading about-block__heading_about-community">О комьюнити</h2>
-    <div class="about-block__block about-block__block-reverse">
+    <h2 class="wow animate__fadeInLeft heading about-block__heading about-block__heading_about-community">О комьюнити</h2>
+    <div class="wow animate__slideInUp about-block__block about-block__block-reverse">
         <div class="about-block__left">
             <img src="./images/about-community.png" alt="project-founders-network" class="about-block__images block-none_md">
             <img src="./images/about-community_sm.png" alt="project-founders-network" class="about-block__images block-none_sm">
