--- a/src/pages/components/pageAboutProducts/aboutProducts.html
+++ b/src/pages/components/pageAboutProducts/aboutProducts.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading_center">О проекте</h2>
-    <div class="about-block__block">
+    <h2 class="wow animate__fadeInUp heading about-block__heading_center">О проекте</h2>
+    <div class="wow animate__slideInUp about-block__block">
         <div class="about-block__left">
             <img src="./images/about-products.png" alt="project-founders-network" class="about-block__images block-none_md">
             <img src="./images/about-products_sm.png" alt="project-founders-network" class="about-block__images block-none_sm">
