--- a/src/pages/components/pageAboutProducts/ourPlans.html
+++ b/src/pages/components/pageAboutProducts/ourPlans.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading about-block__heading_our-plans">Наши планы</h2>
-    <div class="about-block__block">
+    <h2 class="wow animate__fadeInLeft heading about-block__heading about-block__heading_our-plans">Наши планы</h2>
+    <div class="wow animate__slideInUp about-block__block">
         <div class="about-block__left">
             <img src="./images/our-plans.png" alt="project-founders-network" class="about-block__images block-none_md">
             <img src="./images/our-plans_sm.png" alt="project-founders-network" class="about-block__images block-none_sm">
