--- a/src/pages/components/pageAboutProducts/purposesAndMission.html
+++ b/src/pages/components/pageAboutProducts/purposesAndMission.html
@@ -1,6 +1,6 @@
 <section class="purposes-mission wrapper">
-    <h2 class="about-block__heading about-block__heading_our-plans"></h2>
-    <ul class="purposes-mission__list">
+    <h2 class="wow animate__fadeInLeft about-block__heading about-block__heading_our-plans"></h2>
+    <ul class="wow animate__slideInUp purposes-mission__list">
         <li class="purposes-mission__item">
             <img src="./images/purposes.svg" alt="purposes" class="purposes-mission__images">
             <span>
