--- a/src/pages/components/pageHome/founders.html
+++ b/src/pages/components/pageHome/founders.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading about-block__heading_founders">Основатели</h2>
-    <div class="about-block__block about-block__block-reverse">
+    <h2 class="wow animate__fadeInLeft  heading about-block__heading about-block__heading_founders">Основатели</h2>
+    <div class="wow animate__slideInUp about-block__block about-block__block-reverse">
         <div class="about-block__left">
             <img src="./images/founders.png" alt="project-founders-network" class="about-block__images block-none_md">
             <img src="./images/founders_sm.png" alt="project-founders-network" class="about-block__images block-none_sm">
