--- a/src/pages/components/pageHome/project.html
+++ b/src/pages/components/pageHome/project.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading about-block__heading_project">О проекте</h2>
-    <div class="about-block__block">
+    <h2 class="wow animate__fadeInLeft  heading about-block__heading about-block__heading_project">О проекте</h2>
+    <div class="wow animate__slideInUp about-block__block">
         <div class="about-block__left">
             <img src="./images/projects.png" alt="project" class="about-block__images block-none_md">
             <img src="./images/projects_sm.png" alt="project" class="about-block__images block-none_sm">
