--- a/src/pages/components/pageSocilNetwork/telegram.html
+++ b/src/pages/components/pageSocilNetwork/telegram.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
-    <div class="about-block__block">
+    <h2 class="wow animate__fadeInLeft heading about-block__heading about-block__heading_our-plans"></h2>
+    <div class="wow animate__slideInUp about-block__block">
         <div class="about-block__left">
             <a target="_blank" href="https://t.me/teambestcom">
                 <img src="./images/telegram.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
