--- a/src/pages/components/pageSocilNetwork/tiktok.html
+++ b/src/pages/components/pageSocilNetwork/tiktok.html
@@ -1,6 +1,6 @@
 <section class="about-block wrapper">
-    <h2 class="heading about-block__heading_center">Социальные сети</h2>
-    <div class="about-block__block">
+    <h2 class="wow animate__fadeInUp heading about-block__heading_center">Социальные сети</h2>
+    <div class="wow animate__slideInUp about-block__block">
         <div class="about-block__left">
             <a target="_blank" href="https://vm.tiktok.com/ZMNuLT1AF/">
                 <img src="./images/tiktok.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
